--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: "Cantarell", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+/*   line-height: 1.5;
+  font-weight: 400; */
 
 /*   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
