--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,20 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  
 }
+
+/* Variables para el menu contextual */
+*{
+  --contexify-menu-bgColor: oklch(var(--b2));
+  --contexify-separator-color: var(--fallback-bc,oklch(var(--bc)/0.1));
+  --contexify-item-color: #fff;
+  --contexify-activeItem-color: #fff;
+  --contexify-activeItem-bgColor: oklch(var(--p));
+  --contexify-rightSlot-color: #6f6e77;
+  --contexify-activeRightSlot-color: #fff;
+  --contexify-arrow-color: #6f6e77;
+  --contexify-activeArrow-color: #fff;
+}
+
