--- a/src/pages/app/salidas-no-conformes/despacho/redactar/assets/styles/styles.scss
+++ b/src/pages/app/salidas-no-conformes/despacho/redactar/assets/styles/styles.scss
@@ -1,8 +1,8 @@
 /* Basic editor styles */
 .ProseMirror {
-  > * + * {
-    // margin-top: 0.75em;
-  }
+  // > * + * {
+  // margin-top: 0.75em;
+  // }
 
   img {
     max-width: 500px;
@@ -206,7 +206,7 @@
     padding: 10px;
     border-radius: 5px;
     // outline-width: 0;
-    min-height: 150px;
+    min-height: 50px;
   }
 }
 
@@ -221,4 +221,13 @@
 }
 .ProseMirror-focused {
   outline: 2px solid #e4e4e7;
+}
+
+p.is-editor-empty:first-child::before {
+  color: gray;
+  font-style: italic;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
 }
