--- a/src/pages/app/salidas-no-conformes/despacho/redactar/assets/styles/styles.scss
+++ b/src/pages/app/salidas-no-conformes/despacho/redactar/assets/styles/styles.scss
@@ -206,7 +206,7 @@
     padding: 10px;
     border-radius: 5px;
     // outline-width: 0;
-    min-height: 50px;
+    min-height: 100px;
   }
 }
 
@@ -226,7 +226,35 @@
 p.is-editor-empty:first-child::before {
   color: gray;
   font-style: italic;
+  font-size: 12px;
   content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
+.btnEditor {
+  background-color: #e8e8e8;
+  font-size: 14px;
+  padding: 2px 6px;
+  height: 22px;
+  border-radius: 5px;
+  top: -2;
+}
+
+.btnEditor.active {
+  font-weight: bold;
+}
+
+div[contenteditable="false"] {
+  background-color: #f0f0f0;
+}
+
+div[contenteditable="false"]:first-child::before {
+  content: "No aplica";
+  color: gray;
+  font-style: italic;
+  font-size: 12px;
   float: left;
   height: 0;
   pointer-events: none;
